<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/register_image_photo"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:contentDescription="@null"
            android:src="@drawable/photo_icon" />

        <TextView
            style="@style/Theme.Instagram.TextViewBase.From"
            android:layout_gravity="center"
            android:text="@string/photo_register_title"
            android:textSize="24sp" />

        <TextView
            style="@style/Theme.Instagram.TextViewBase.From"
            android:layout_gravity="center"
            android:text="@string/photo_register_subtitle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/jump"
            style="@style/Theme.Instagram.Link"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>