<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/instagram_logo_black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_text_email"
                style="@style/Theme.Instagram.FormEditText"
                android:autofillHints=""
                android:hint="@string/login_emai_acess"
                android:inputType="textEmailAddress" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_text_password"
                style="@style/Theme.Instagram.FormEditText"
                android:autofillHints=""
                android:hint="@string/login_password_acess"
                android:inputType="textPassword" />

            <co.tiagoaguiar.course.instagram.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter_app" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <View
                    style="@style/Theme.Instagram.FormContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:background="#BABABA" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:padding="2dp"
                    android:text="@string/or" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#969696"
        app:layout_constraintBottom_toTopOf="@id/texte_cadastre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texte_cadastre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/cadaster_user"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>