<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_image_photo"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:src="@drawable/photo_icon"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_edit_email"
        style="@style/Theme.Instagram.FormEditText"
        android:textAlignment="center"
        android:hint="@string/register_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_email"
        tools:layout_editor_absoluteX="36dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_edit_password"
        android:hint="@string/register_edit_name"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register_image_photo"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_email"
        style="@style/Theme.Instagram.FormEditText"/>

    <co.tiagoaguiar.course.instagram.view.view.login.LoadingButton
        android:id="@+id/btn_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.7"
        app:text="Avançar"
        android:autofillHints="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#969696"
        app:layout_constraintBottom_toTopOf="@id/texte_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texte_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_user"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>